--- a/superlists/lists/templates/home.html
+++ b/superlists/lists/templates/home.html
@@ -1,10 +1,12 @@
 <html>
 	<title>To-Do lists</title>
 	<body>
-	<h1>Start a new To-Do list</h1>
+	<h1 style="text-align: center;">Start a new To-Do list</h1>
 	<form method="POST", action="/lists/new">
-		<input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
-		{% csrf_token %}	
+		<p style="text-align: center;">
+		<input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />	
+		</p>
+		{% csrf_token %}
 	</form>
 	</body>
 </html>
